# sphinx-terraform

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish-stag.yml  python-publish.yml  static.yml
docs/: conf.py  index.rst
docs/demo/: index.md  map_doc.md
src/: tfreport.py
src/sphinx_terraform/: __init__.py
src/sphinx_terraform_ch/: __init__.py  fnmap_gen.py  module_map.schema.json  tfblock.py  tfdomain.py  tfmapexpand.py  tfmodule.py  tfparse.py
test/: module_map.yaml  test_fnmap_gen.py  test_tfblock.py
test/example_map/projectC/: main.tf  s3.tf
test/example_map/projectD/: main.tf  s3.tf
test/example_map/projectE/: main.tf  s3.tf
test/example_map/subgroup/projectF/: locals.tf  main.tf  s3.tf
test/example_map/subgroup/projectG/: main.tf  s3.tf
test/example_map2/projectH/: main.tf  s3.tf
test/example_map2/projectI/: main.tf  s3.tf
test/example_map2/projectJ/: main.tf  s3.tf
test/terraform/docs/: testing.txt
test/terraform/projectA/: main.tf  s3.tf
test/terraform/projectB/: main.tf
tf/: __init__.py  tfmodule.py
